--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+# node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -59,3 +59,36 @@ typings/
 
 # next.js build output
 .next
+/node_modules/director/.npmignore
+/node_modules/director/.travis.yml
+/node_modules/director/bin/build
+/node_modules/director/bower.json
+/node_modules/director/build/director.min.js
+/node_modules/director/build/ender.js
+/node_modules/director/examples
+/node_modules/director/img
+/node_modules/director/lib
+/node_modules/director/LICENSE
+/node_modules/director/package.json
+/node_modules/director/README.md
+/node_modules/director/test
+/node_modules/todomvc-app-css/license
+/node_modules/todomvc-app-css/package.json
+/node_modules/todomvc-app-css/readme.md
+/node_modules/todomvc-common/license
+/node_modules/todomvc-common/package.json
+/node_modules/todomvc-common/readme.md
+/node_modules/vue/dist/README.md
+/node_modules/vue/dist/vue.common.js
+/node_modules/vue/dist/vue.esm.browser.js
+/node_modules/vue/dist/vue.esm.js
+/node_modules/vue/dist/vue.min.js
+/node_modules/vue/dist/vue.runtime.common.js
+/node_modules/vue/dist/vue.runtime.esm.js
+/node_modules/vue/dist/vue.runtime.js
+/node_modules/vue/dist/vue.runtime.min.js
+/node_modules/vue/LICENSE
+/node_modules/vue/package.json
+/node_modules/vue/README.md
+/node_modules/vue/src
+/node_modules/vue/types
